--- a/fn/package.json
+++ b/fn/package.json
@@ -22,6 +22,7 @@
     "d3": "^7.1.1",
     "dotenv": "^10.0.0",
     "geotiff": "^1.0.8",
+    "jwt-decode": "^3.1.2",
     "mapbox-gl": "^2.6.0",
     "mui": "^0.0.1",
     "ol": "^6.9.0",
