--- a/fn/package.json
+++ b/fn/package.json
@@ -34,6 +34,7 @@
     "react-scripts": "^4.0.3",
     "react-transition-group": "^4.4.2",
     "react-window": "^1.8.6",
+    "reactstrap": "^9.0.1",
     "recharts": "^2.1.6",
     "web-vitals": "^1.0.1"
   },
