--- a/fn/package.json
+++ b/fn/package.json
@@ -22,6 +22,7 @@
     "d3": "^7.1.1",
     "dotenv": "^10.0.0",
     "geotiff": "^1.0.8",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mapbox-gl": "^2.6.0",
     "mui": "^0.0.1",
@@ -29,6 +30,7 @@
     "proj4": "^2.7.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jwt": "^1.1.4",
     "react-map-gl": "^6.1.17",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
