--- a/fn/package.json
+++ b/fn/package.json
@@ -62,5 +62,9 @@
   },
   "devDependencies": {
     "prettier": "2.4.1"
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   }
 }
